--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,13 @@ anyhow = "1.0.93"
 clap = { version = "4.5.21", features = ["derive"] }
 clap-verbosity-flag = "3.0.1"
 confy = "0.6.1"
-directories = "5.0.1"
 env_logger = "0.11.5"
 fs_extra = "1.3.0"
 indicatif = "0.17.9"
 log = "0.4.22"
 serde = { version = "1.0.215", features = ["derive"] }
+
+[dev-dependencies]
+assert_cmd = "2.0.16"
+assert_fs = "1.1.2"
+predicates = "3.1.2"
